--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,7 @@ build-job: # This job runs in the build stage, which runs first.
   stage: build
   script:
     - echo "Compiling the code..."
+    - npm install
     - npm run build
 
 unit-test-job: # This job runs in the test stage.
