--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,30 +3,41 @@ image: node:latest
 before_script:
   - apt-get update -qy
 
+
 stages:
+  - libs
   - build
   - test
   - deploy
 
+npm-job:
+  stage: libs
+  cache:
+    paths:
+      - node_modules
+  script:
+    - npm install
+    - npm install --save-dev jest eslint
+
 build-job: # This job runs in the build stage, which runs first.
   stage: build
+  cache:
+    paths:
+      - dist
   script:
     - echo "Compiling the code..."
-    - npm install
     - npm run build
 
 unit-test-job: # This job runs in the test stage.
   stage: test # It only starts when the job in the build stage completes successfully.
   script:
     - echo "Running unit tests... This will take about 60 seconds."
-    - npm install --save-dev jest
     - npm run test
 
 lint-test-job: # This job also runs in the test stage.
   stage: test # It can run at the same time as unit-test-job (in parallel).
   script:
     - echo "Linting code... This will take about 10 seconds."
-    - npm install --save-dev eslint
     - npm run lint
 
 deploy-job: # This job runs in the deploy stage.
